--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<a href="https://shorturl.at/fyzA8" class="image fit"><img src="images/Human_Powered_Health_Women's_Cycling_Team.jpg" alt="" /></a>
 									<p>Design marketing strategies aimed at converting casual riders into annual members. </p>
 									<ul class="actions special">
-										<li><a href="https://shorturl.at/fyzA8" class="button">View Project</a></li>
+										<li><a href="https://docs.google.com/presentation/d/1sAWWKXaxwC7LDt0jv-P7gXKpudhmoFxC/edit?usp=sharing&ouid=112957222432858609364&rtpof=true&sd=true" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
